Version 0.9.1
------------------------------------------------------------------------------

* Added option for the evaluate function to include timing information of ran
  commands. This information will be subsequently rendered by the replay.
  Example usage:
  evaluate::replay(evaluate::evaluate('Sys.sleep(1)', include_timing = TRUE))

Version 0.9
------------------------------------------------------------------------------

* Added an argument `allow_error` to `parse_all()` to allow syntactical errors
  in R source code when `allow_error = TRUE`; this means `evaluate(stop_on_error
  = 0 or 1)` will no longer stop on syntactical errors but returns a list of
  source code and the error object instead. This can be useful to show
  syntactical errors for pedagogical purposes.

Version 0.8.3
------------------------------------------------------------------------------

* Added an argument `filename` to evaluate() and parse_all() (thanks,
  @flying-sheep, #58).

Version 0.8
------------------------------------------------------------------------------

* Changed package license to MIT.

Version 0.7.2
------------------------------------------------------------------------------

* replay() fails to replay certain objects such as NULL (#53).

Version 0.7
------------------------------------------------------------------------------

* R 3.0.2 is the minimal required version for this package now.

Version 0.6
------------------------------------------------------------------------------

* Plots are no longer recorded when the current graphical device has been
  changed, which may introduce issues like yihui/knitr#824.

* `parse_all()` can parse R code that contains multibyte characters correctly
  now (#49, yihui/knitr#988)

Version 0.5.5
------------------------------------------------------------------------------

* Actually use the `text` and `graphics` in `new_output_handler`

* Multiple expressions separated by `;` on the same line can be printed as